--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -132,9 +132,10 @@ video
   height: 100%
 table
   //border-radius: 5px
-  //border-collapse: separate
+  border-collapse: separate
   //border-radius: 5px
-  border-spacing: 0
+  //border-spacing: 0
+  //overflow: hidden
   tr:first-child th:first-child
     border-top-left-radius: 5px
   tr:first-child th:last-child
@@ -159,7 +160,7 @@ table
     font-size: 20px
     background: $first-gradient
     color: white
-    border: 2px solid $first-gradient
+    //border: 2px solid $first-gradient
 
 button:focus
   outline: none!important
