--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -143,7 +143,7 @@ video {
   height: 100%; }
 
 table {
-  border-spacing: 0; }
+  border-collapse: separate; }
   table tr:first-child th:first-child {
     border-top-left-radius: 5px; }
   table tr:first-child th:last-child {
@@ -165,8 +165,7 @@ table {
     padding: 8px;
     font-size: 20px;
     background: #880A6C;
-    color: white;
-    border: 2px solid #880A6C; }
+    color: white; }
 
 button:focus {
   outline: none !important; }
