--- a/src/views/console/index.ejs
+++ b/src/views/console/index.ejs
@@ -19,6 +19,7 @@
 <% include partials/header.ejs %>
 <main>
     <div class="container console-home">
+        <img src="../images/welcome-dashboard.png" alt="Welcome" width="60%" style="margin-left: auto; margin-right: auto; display: block; margin-bottom: 30px">
         <div class="row">
             <div class="col-md-6">
                 <div id="console-chart">
