--- a/src/views/console/partials/header.ejs
+++ b/src/views/console/partials/header.ejs
@@ -20,7 +20,7 @@
             <% } %>
 
             <ul class="right">
-                <li>Welcome <%= locals.userfirstname %></li>
+                <li>Welcome <%= locals.agentfirstname %></li>
                 <li><a href="../auth/logout">Logout</a></li>
             </ul>
         </nav>
