--- a/src/views/console/agents.ejs
+++ b/src/views/console/agents.ejs
@@ -112,7 +112,7 @@
                     location.reload();
                 },
                 error: function(data){
-                    $("#emailnotfound").html("This email address is not registered with us!");
+                    $("#emailnotfound").html("This email address is already associated or it is not registered with us!");
                 }
             });
         });
