--- a/src/views/console/setup.ejs
+++ b/src/views/console/setup.ejs
@@ -22,7 +22,7 @@
 
     <div class="wrap">
         <h3>Is your company registered with us?</h3>
-        If yes, please ask your admin to add you to their company account. It's super quick.
+        If yes, please ask your admin to add you to their company account. It's super quick. Once it's done, please logout and login again.
         <div class="highlight">The email you used to register is: <span id="email"><%= locals.email %> </span>  </div>
     </div>
     <div class="wrap">
