--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -34,7 +34,7 @@
             <div class="row"><div class="col-sm-4 left"><label for="email">Email:</label></div> <div class="col-sm-8"><input type="text" name="email" id="email"></div></div>
             <div class="row"><div class="col-sm-4 left"><label for="password1">Password:</label></div> <div class="col-sm-8"><input type="password" name="password1" id="password1"></div></div>
             <div class="row"><div class="col-sm-4 left"><label for="password">Repeat Password:</label></div> <div class="col-sm-8"><input type="password" name="password" id="password"></div></div>
-
+            <div class="err"> <%= message[0] %> </div>
             <button id="signup-btn">Sign Up!</button>
         </form>
     </div>
@@ -79,7 +79,7 @@
         })
 
     });
-
+console.log(message)
 
 </script>
 
