--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -136,17 +136,20 @@ footer
     display: block
     margin-left: auto
     margin-right: auto
-.signup-page
-  select
-    background-color: white
-    border: 7px solid white
-    border-radius: 4px
-    color: black
-    margin-left: 10px
+//.signup-page
+//  select
+//    background-color: white
+//    border: 7px solid white
+//    border-radius: 4px
+//    color: black
+//    margin-left: 10px
 .registration-page
   font-size: 1.2rem
   padding: 20px
   text-align: center
+  .err
+    color: $logo-color
+    font-size: 13px
   label.error
     font-size: 10px
     margin-bottom: 0px
