--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -24,9 +24,9 @@ a:hover
   padding-bottom: 2px
   border-bottom: 2px solid
 input:active
-  outline: none!important
+  outline: none
 input:focus
-  outline: none!important
+  outline: none
 img
   user-drag: none
   user-select: none
@@ -317,6 +317,7 @@ button:focus.add-campaign
       margin-right: auto
       text-align: center
       font-size: 30px
+      display: block
 
   .btn
     @extend button.add-campaign
