--- a/src/views/console/campaigns.ejs
+++ b/src/views/console/campaigns.ejs
@@ -64,7 +64,8 @@
         <div class="modal-content">
             <form action="" method="post" id="campaign-wizard">
                 <div class="modal-body">
-                    <input class="campaign-title" id="title" name="title" type="text" placeholder="Please enter a title"><br>
+                    <p><input type="text" id="title" class="campaign-title" name="title" placeholder="Enter a title"></p>
+
                     Now please select an image for your banners. <b>This needs to be squared.</b>
                     <div class="row selectpreview">
                         <div class="col-md-6 left">
