--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -140,10 +140,12 @@ table
     border-top-left-radius: 5px
   tr:first-child th:last-child
     border-top-right-radius: 5px
-
+  tr
+    height: 40px
   tr td
     border-right: 1px solid $first-gradient
     border-bottom: 1px solid $first-gradient
+    min-height: 40px
   tr:last-child td
     border-bottom: 2px solid $first-gradient!important
   tr td:first-child
@@ -155,12 +157,17 @@ table
 
   td
     padding-left: 15px
+    padding-right: 15px
   th
     padding: 8px
     font-size: 20px
     background: $first-gradient
     color: white
-    //border: 2px solid $first-gradient
+  #admin-circle
+    height: 30px
+    margin-left: auto
+    margin-right: auto
+    display: block
 
 button:focus
   outline: none!important
@@ -374,4 +381,8 @@ button:focus.add-campaign
     width: 300px
 #emailnotfound
   color: $first-gradient
-    
+  font-size: 0.8em
+input#email
+  margin-bottom: 10px
+.text-center
+  text-align: center
