--- a/src/views/partials/head.ejs
+++ b/src/views/partials/head.ejs
@@ -3,7 +3,7 @@
 <script type="text/javascript">
     $(document).ready(function () {
         if (window.canRunAds === undefined) {
-            $("body").load("adblock.html");
+            $("body").load("./adblock.html");
         }
     })
 </script>
