--- a/src/views/console/partials/head.ejs
+++ b/src/views/console/partials/head.ejs
@@ -3,7 +3,11 @@
 <script type="text/javascript">
     $(document).ready(function () {
         if (window.canRunAds === undefined) {
-            $("body").load("adblock.html");
+            if(window.location.pathname==='/console'){
+                $("body").load("../adblock.html");
+            } else{
+                $("body").load("../../adblock.html");
+            }
         }
     })
 </script>
