--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -118,6 +118,8 @@ h1
   color: white
 .answer-video
   height: 400px
+  width: 400px
+  overflow: hidden
 video
   display: block
   margin-left: auto
