--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -24,13 +24,12 @@
 <main>
 
 
-
     <form id="login-form" method="post" action="../auth/login">
         <div class="container login-page">
-            <div class="row"><label for="email"></label><input type="text" placeholder="email" id="email" name="email"></div>
+            <div class="row"><label for="email"></label><input type="text" placeholder="email" id="email" name="email" default="<% if(message[1]){ %><%= message[1] %><% } %>"></div>
             <div class="row"><label for="password"></label><input type="password" placeholder="password" id="password" name="password"></div>
             <% if(message[0] != null) { %>
-            <div class="err"> <%= message[0] %> </div>
+                <div class="err"> <%= message[0] %> </div>
             <% } %>
 
             <p><button id="login-btn">Enter!</button></p>
