--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -360,6 +360,20 @@ button:focus.add-campaign, .modal-body .btn:focus {
     margin-top: 40px;
     margin-bottom: 40px; }
 
+button#take-calls {
+  display: block;
+  margin: 100px auto 100px auto;
+  background: #880A6C;
+  font-size: 2em;
+  border: 1px solid transparent;
+  border-radius: 5px;
+  padding: 10px;
+  color: white; }
+
+.localVideo {
+  position: absolute;
+  height: 100%; }
+
 .modal-footer {
   background-color: #880A6C; }
   .modal-footer .btn {
