--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -339,6 +339,18 @@ button:focus.add-campaign
   p
     margin-top: 40px
     margin-bottom: 40px
+button#take-calls
+  display: block
+  margin: 100px auto 100px auto
+  background: $first-gradient
+  font-size: 2em
+  border: 1px solid transparent
+  border-radius: 5px
+  padding: 10px
+  color: white
+.localVideo
+  position: absolute
+  height: 100%
 .modal-footer
   background-color: $first-gradient
 
