--- a/src/views/console/answer.ejs
+++ b/src/views/console/answer.ejs
@@ -47,7 +47,7 @@
         // the id/element dom element that will hold "our" video
         localVideoEl: 'localVideo',
         // the id/element dom element that will hold remote videos
-        remoteVideosEl: 'remoteVideos',
+//        remoteVideosEl: 'remoteVideos',
         // immediately ask for camera access
         autoRequestMedia: true,
         media: { video: true, audio: true }
