--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -11,6 +11,8 @@ body
   font-family: $primary-font
   display: flex
   flex-direction: column
+::selection
+  background: $logo-color
 a
   color: inherit
 a:focus
