--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -222,6 +222,9 @@ button:focus.add-campaign
     height: 150px
     position: relative
     top: 50%
+#activesuspended
+  text-align: center
+  font-size: .8em
 .setup
   main
     width: 600px
