--- a/public/stylesheets/style-loggedin.sass
+++ b/public/stylesheets/style-loggedin.sass
@@ -225,6 +225,10 @@ button:focus.add-campaign
 #activesuspended
   text-align: center
   font-size: .8em
+#localVideo
+  margin-left: auto
+  margin-right: auto
+  display: block
 .setup
   main
     width: 600px
@@ -345,9 +349,8 @@ button:focus.add-campaign
   p
     margin-top: 40px
     margin-bottom: 40px
-button#take-calls
+button#home
   display: block
-  margin: 100px auto 100px auto
   background: $first-gradient
   font-size: 2em
   border: 1px solid transparent
