--- a/src/views/console/snippet.ejs
+++ b/src/views/console/snippet.ejs
@@ -17,14 +17,10 @@
 
                 <h1>Copy and paste this snippet on your website</h1>
                 <textarea id="snippet">
-Public Property NewProperty() As String
-    Get
-        Return newPropertyValue
-    End Get
-    Set(ByVal value As String)
-        newPropertyValue = value
-    End Set
-End Property
+<div id="adcall"></div>
+<script src="https://simplewebrtc.com/latest-v2.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+<script publisherId=<%=companyid%> src="bannerServer.js"></script>
                 </textarea>
 
     </div>
