--- a/public/stylesheets/style-loggedin.css
+++ b/public/stylesheets/style-loggedin.css
@@ -245,6 +245,11 @@ button:focus.add-campaign, .modal-body .btn:focus {
   text-align: center;
   font-size: .8em; }
 
+#localVideo {
+  margin-left: auto;
+  margin-right: auto;
+  display: block; }
+
 .setup main {
   width: 600px;
   margin-left: auto;
@@ -368,9 +373,8 @@ button:focus.add-campaign, .modal-body .btn:focus {
     margin-top: 40px;
     margin-bottom: 40px; }
 
-button#take-calls {
+button#home {
   display: block;
-  margin: 100px auto 100px auto;
   background: #880A6C;
   font-size: 2em;
   border: 1px solid transparent;
