--- a/src/views/console/index.ejs
+++ b/src/views/console/index.ejs
@@ -18,42 +18,59 @@
     <div class="container console-home">
         <img src="../images/welcome-dashboard.png" alt="Welcome" width="60%" style="margin-left: auto; margin-right: auto; display: block; margin-bottom: 30px">
         <div class="row">
-            <div class="col-md-6">
-                <div id="console-chart">
-                    <canvas id="chart" ></canvas>
-                </div>
+            <div class="col-md-4">
+                <% var totalImpressionsLast7=0;
+                   if (typeof locals.impressionsData!="undefined"){
+                        for(var i=0; i<impressionsData.length-1; i++)
+                            totalImpressionsLast7 += parseInt(impressionsData[i].count)
+                    } %>
+
+                <h4>Welcome to your dashboard <%= agentfirstname %>!</h4>
+                <% if (totalImpressionsLast7 != 0){ %>
+                    In the last 7 days your ads had <%= totalImpressionsLast7 %> impressions.
+                <% } %>
+
+
             </div>
-            <div class="col-md-6">
-                <div id="console-chart">
-                    <canvas id="chart2" ></canvas>
-                </div>
+            <div class="col-md-8">
+
+                <% if(totalImpressionsLast7===0){ %>
+                    <div class="no-content">
+                        No data to show :(
+                    </div>
+                <% } else { %>
+                    <div id="console-chart">
+                        <canvas id="chart" ></canvas>
+                    </div>
+                <% } %>
             </div>
+
         </div>
 
         <script>
+            var chartInputData=[];
+            var chartInputDates=[];
+            <%
+                if (typeof locals.impressionsData!="undefined"){
+                    for(var i=0; i<impressionsData.length-1; i++){ %>
+                        chartInputData.push(<%=impressionsData[i].count%>);
+                        chartInputDates.push("<%=impressionsData[i].date%>");
+                    <% }
+                } %>
+            console.log(chartInputData);
             var ctx = document.getElementById('chart');
             var myChart = new Chart(ctx, {
                 type: 'line',
                 data: {
-                    labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
+                    labels: chartInputDates,
                     datasets: [{
-                        label: '# of Votes',
-                        data: [12, 19, 3, 5, 2, 3],
+                        label: 'Impressions',
+                        data: chartInputData,
                         backgroundColor: [
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(255, 206, 86, 0.2)',
-                            'rgba(75, 192, 192, 0.2)',
-                            'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
+                            'rgba(136, 10, 108,.2)'
                         ],
                         borderColor: [
-                            'rgba(255,99,132,1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 206, 86, 1)',
-                            'rgba(75, 192, 192, 1)',
-                            'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
+                            'rgba(136, 10, 108,1)',
                         ],
                         borderWidth: 1
                     }]
@@ -70,45 +87,6 @@
             });
         </script>
 
-        <script>
-            var ctx = document.getElementById('chart2');
-            var myChart = new Chart(ctx, {
-                type: 'bar',
-                data: {
-                    labels: ["Red", "Blue", "Yellow", "Green", "Purple", "Orange"],
-                    datasets: [{
-                        label: '# of Votes',
-                        data: [12, 19, 3, 5, 2, 3],
-                        backgroundColor: [
-                            'rgba(255, 99, 132, 0.2)',
-                            'rgba(54, 162, 235, 0.2)',
-                            'rgba(255, 206, 86, 0.2)',
-                            'rgba(75, 192, 192, 0.2)',
-                            'rgba(153, 102, 255, 0.2)',
-                            'rgba(255, 159, 64, 0.2)'
-                        ],
-                        borderColor: [
-                            'rgba(255,99,132,1)',
-                            'rgba(54, 162, 235, 1)',
-                            'rgba(255, 206, 86, 1)',
-                            'rgba(75, 192, 192, 1)',
-                            'rgba(153, 102, 255, 1)',
-                            'rgba(255, 159, 64, 1)'
-                        ],
-                        borderWidth: 1
-                    }]
-                },
-                options: {
-                    scales: {
-                        yAxes: [{
-                            ticks: {
-                                beginAtZero:true
-                            }
-                        }]
-                    }
-                }
-            });
-        </script>
 
 
     </div>
